--- a/style.css
+++ b/style.css
@@ -12,6 +12,20 @@ common all style
   box-sizing: border-box;
 }
 
+button {
+  color: #fdfcfd;
+  padding: 10px 25px;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+}
+
+/*
+Header section styles
+*/
+
 .hero {
   width: 100%;
   height: 100vh;
@@ -33,16 +47,6 @@ common all style
 
 .logo {
   width: 110px;
-  cursor: pointer;
-}
-
-nav button {
-  color: #fdfcfd;
-  padding: 10px 25px;
-  background: transparent;
-  border: 1px solid #fff;
-  border-radius: 20px;
-  outline: none;
   cursor: pointer;
 }
 
@@ -105,9 +109,8 @@ nav button {
   align-items: center;
   justify-content: space-around;
   position: absolute;
-  bottom: 0;
+  bottom: -70px;
 }
-
 
 .bubbles > img {
   width: 50px;
@@ -129,4 +132,30 @@ nav button {
     transform: translateY(-80vh);
     opacity: 0;
   }
+}
+
+.bubbles img:nth-child(1) {
+  animation-delay: 2s;
+  width: 25px;
+}
+.bubbles img:nth-child(2) {
+  animation-delay: 1s;
+}
+.bubbles img:nth-child(3) {
+  animation-delay: 3s;
+  width: 25px;
+}
+.bubbles img:nth-child(4) {
+  animation-delay: 4.5s;
+}
+.bubbles img:nth-child(5) {
+  animation-delay: 3s;
+}
+.bubbles img:nth-child(6) {
+  animation-delay: 6s;
+  width: 20px;
+}
+.bubbles img:nth-child(7) {
+  animation-delay: 7s;
+  width: 35px;
 }
