--- a/style.css
+++ b/style.css
@@ -159,3 +159,46 @@ Header section styles
   animation-delay: 7s;
   width: 35px;
 }
+
+/*
+    Responsive with media Queries all styles start here,
+ */
+
+/* FOR MOBILE DEVICE */
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 36px;
+    line-height: 50px;
+  }
+  .side-bar {
+    width: 100%;
+    height: 50px;
+    top: auto;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    box-sizing: border-box;
+  }
+  .social-icons {
+    width: auto;
+    position: unset;
+    transform: none;
+  }
+
+  .usefull-icons {
+    width: auto;
+    position: unset;
+  }
+
+  .side-bar .side-bar-img {
+    width: 18px;
+    margin: 0;
+  }
+
+  .hero {
+    background-image: linear-gradient(#000e2e, #004f5a);
+  }
+}
